--- a/src/outpost/base/templates/registration/login.html
+++ b/src/outpost/base/templates/registration/login.html
@@ -23,7 +23,7 @@
     <label for="username" class="sr-only">
       Username:
     </label>
-    <input id="username" class="form-control" placeholder="Username" required="" autofocus="" type="email">
+    <input id="username" class="form-control" placeholder="Username" required="" autofocus="" type="text">
     <label for="password" class="sr-only">
       Password
     </label>
