Add logout button if user is authenticated.

--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -36,10 +36,17 @@
         <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
             <li>
+              {% if request.user.is_authenticated %}
+              <a href="{% url 'accounts:logout' %}">
+                <i class="glyphicon glyphicon-log-out"></i>
+                Logout
+              </a>
+              {% else %}
               <a href="{% url 'accounts:login' %}">
                 <i class="glyphicon glyphicon-log-in"></i>
                 Login
               </a>
+              {% endif %}
             </li>
           </ul>
         </div><!--/.nav-collapse -->
