--- a/src/outpost/base/templates/registration/login.html
+++ b/src/outpost/base/templates/registration/login.html
@@ -1,14 +1,10 @@
 {% extends "outpost/base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 <div class="signin">
   <h2 class="form-signin-heading">Please sign in</h2>
-  {% if form.errors %}
-  <div class="alert alert-warning" role="alert">
-    Your username and password didn't match. Please try again.
-  </div>
-  {% endif %}
-
   {% if next %}
       <div class="alert alert-info" role="alert">
         {% if user.is_authenticated %}
@@ -19,15 +15,8 @@
       </div>
   {% endif %}
   <form method="post" action="{% url 'accounts:login' %}" class="form-signin well">
-  {% csrf_token %}
-    <label for="username" class="sr-only">
-      Username:
-    </label>
-    <input id="username" class="form-control" placeholder="Username" required="" autofocus="" type="text">
-    <label for="password" class="sr-only">
-      Password
-    </label>
-    <input id="password" class="form-control" placeholder="Password" required="" type="password">
+    {% csrf_token %}
+    {{ form|crispy }}
     <button class="btn btn-lg btn-primary btn-block" type="submit">
       <i class="glyphicon glyphicon-log-in"></i>
       Sign in
