--- a/src/outpost/api/templates/rest_framework/api.html
+++ b/src/outpost/api/templates/rest_framework/api.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+{{ request.user }}
   {% block breadcrumbs %}
     <ul class="breadcrumb">
       {% for breadcrumb_name, breadcrumb_url in breadcrumblist %}
