--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -28,25 +28,40 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img src="{% static 'logo.svg' %}" class="navbar-left logo">
+          <img src="{% static 'logo.svg' %}" class="hidden-xs navbar-left logo">
           <a class="navbar-brand" rel="nofollow" href="/">
-            API @ Medical University of Graz
+            <span class="hidden-xs">API @ Medical University of Graz</span>
+            <span class="visible-xs">API @ MUG</span>
           </a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse navbar-right">
+        <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            {% include 'api/nav.html' %}
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            {% if request.user.is_authenticated %}
+            {% if request.user.is_staff %}
             <li>
-              {% if request.user.is_authenticated %}
+              <a href="{% url 'admin:index' %}">
+                <i class="glyphicon glyphicon-cog"></i>
+                Backend
+              </a>
+            </li>
+            {% endif %}
+            <li>
               <a href="{% url 'accounts:logout' %}">
                 <i class="glyphicon glyphicon-log-out"></i>
                 Logout
               </a>
-              {% else %}
+            </li>
+            {% else %}
+            <li>
               <a href="{% url 'accounts:login' %}">
                 <i class="glyphicon glyphicon-log-in"></i>
                 Login
               </a>
-              {% endif %}
+            </li>
+            {% endif %}
             </li>
           </ul>
         </div><!--/.nav-collapse -->
