Add authentication and object access permissions.

--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -36,6 +36,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            {% include 'oauth2/nav.html' %}
             {% include 'api/nav.html' %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
