--- a/src/outpost/oauth2/templates/oauth2_provider/application_form.html
+++ b/src/outpost/oauth2/templates/oauth2_provider/application_form.html
@@ -11,7 +11,8 @@
     {% endblock app-form-title %}
   </h1>
 </div>
-<form method="post" action="{% block app-form-action-url %}{% url 'oauth2_provider:update' application.id %}{% endblock app-form-action-url %}">
+<p>
+<form method="post" action="{% if application %}{% url 'oauth2:edit' pk=application.pk %}{% else %}{% url 'oauth2:create' %}{% endif %}" enctype="multipart/form-data">
   {% csrf_token %}
 
   {{ form|crispy }}
@@ -23,8 +24,7 @@
   </div>
 
   <div class="control-group">
-    <div class="controls">
-      <a class="btn btn-default" href="{% block app-form-back-url %}{% url "oauth2_provider:detail" application.id %}{% endblock app-form-back-url %}">
+      <a class="btn btn-default" href="{% url 'oauth2:list' %}">
         <span class="glyphicon glyphicon-chevron-left"></span>
         {% trans "Go Back" %}
       </a>
@@ -32,7 +32,7 @@
         <span class="glyphicon glyphicon-ok"></span>
         Save
       </button>
-    </div>
   </div>
 </form>
+</p>
 {% endblock %}
