--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -41,19 +41,28 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
-            {% if request.user.is_staff %}
-            <li>
-              <a href="{% url 'admin:index' %}">
-                <i class="glyphicon glyphicon-cog"></i>
-                Backend
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="glyphicon glyphicon-user"></span>
+                {{ request.user }}
+                <span class="caret"></span>
               </a>
-            </li>
-            {% endif %}
-            <li>
-              <a href="{% url 'accounts:logout' %}">
-                <i class="glyphicon glyphicon-log-out"></i>
-                Logout
-              </a>
+              <ul class="dropdown-menu">
+                {% if request.user.is_staff %}
+                <li>
+                  <a href="{% url 'admin:index' %}">
+                    <i class="glyphicon glyphicon-cog"></i>
+                    Backend
+                  </a>
+                </li>
+                {% endif %}
+                <li>
+                  <a href="{% url 'accounts:logout' %}">
+                    <i class="glyphicon glyphicon-log-out"></i>
+                    Logout
+                  </a>
+                </li>
+              </ul>
             </li>
             {% else %}
             <li>
