--- a/src/outpost/oauth2/templates/oauth2_provider/authorize.html
+++ b/src/outpost/oauth2/templates/oauth2_provider/authorize.html
@@ -6,7 +6,10 @@
 {% if not error %}
 <div class="page-header">
   <h1>
+    <span>
     {% trans "Authorize" %} {{ application.name }}
+    </span>
+    <img class='pull-right' src="{{ application.logo.url }}"/>
   </h1>
 </div>
 <form id="authorizationForm" method="post">
