--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -84,7 +84,36 @@
     {% compress js %}
     {% block script %}
     <script src="{% static 'jquery/jquery.js' %}"></script>
+    <script src="{% static 'jquery-cookie/jquery.cookie.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
+    <script src="{% static 'outpost/ajax.js' %}"></script>
+    <script>
+    var checkTaskProgress = function(id) {
+      var defer = $.Deferred();
+      var current = {};
+      function check() {
+        $.ajax({
+          url: decodeURIComponent("{% url 'base:task' task='#' %}").replace('#', id),
+          method: 'GET'
+        }).done(function(data) {
+          if (data.state === 'SUCCESS') {
+            defer.resolve(data);
+            return;
+          }
+          if (data.state === 'FAILURE') {
+            defer.reject(data);
+            return;
+          }
+          if (data.state === 'PROGRESS') {
+            defer.notify(data);
+          }
+          setTimeout(check, 1000);
+        }).fail(defer.reject);
+      };
+      check();
+      return defer.promise();
+    }
+    </script>
     {% endblock %}
     {% endcompress %}
   </body>
