--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -38,6 +38,7 @@
           <ul class="nav navbar-nav">
             {% include 'oauth2/nav.html' %}
             {% include 'api/nav.html' %}
+            {% include 'video/nav.html' %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
