--- a/src/outpost/video/templates/video/nav.html
+++ b/src/outpost/video/templates/video/nav.html
@@ -1,3 +1,4 @@
+{% if perms.video %}
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     <span class="glyphicon glyphicon-film"></span>
@@ -13,4 +14,4 @@
     </li>
   </ul>
 </li>
-
+{% endif %}
