--- a/src/outpost/video/templates/video/recording_detail.html
+++ b/src/outpost/video/templates/video/recording_detail.html
@@ -30,7 +30,10 @@
   <div class="panel-footer hidden status">
     <div class="progress">
       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-        <span class="sr-only"><span class="percent">0</span>% Complete</span>
+        <span>
+          <span class="action"></span>
+          (<span class="percent">0</span>%)
+        </span>
       </div>
     </div>
   </div>
