Add previews for Epiphan sources.

--- a/src/outpost/video/templates/video/nav.html
+++ b/src/outpost/video/templates/video/nav.html
@@ -10,7 +10,7 @@
       <a href="{% url 'video:recording:list' %}">Recordings</a>
     </li>
     <li>
-      <a href="">Publish</a>
+      <a href="{% url 'video:recorder:list' %}">Recorders</a>
     </li>
   </ul>
 </li>
