Show header above recordings table.

--- a/src/outpost/video/templates/video/epiphan_detail.html
+++ b/src/outpost/video/templates/video/epiphan_detail.html
@@ -38,6 +38,7 @@
   No preview images available because of missing sources.
 </div>
 {% endif %}
+<h2>Recordings</h2>
 {% if object.recording_set.exists %}
 <table class="table table-striped">
 <thead>
