--- a/src/outpost/base/static/base/style.scss
+++ b/src/outpost/base/static/base/style.scss
@@ -54,3 +54,13 @@ label {
 #splash {
   background: url("splash.jpg") no-repeat center center;
 }
+.progress {
+  position: relative;
+}
+
+.progress span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  font-weight: bold;
+}
