--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load compress %}
+{% load i18n %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -14,7 +15,7 @@
     {% block style %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.css' %}" type="text/css" charset="utf-8">
     <link rel="stylesheet" href="{% static 'bootswatch/sandstone/bootstrap.css' %}" type="text/css" charset="utf-8">
-    <link rel="stylesheet" href="{% static 'outpost/style.scss' %}" type="text/x-scss" charset="utf-8">
+    <link rel="stylesheet" href="{% static 'base/style.scss' %}" type="text/x-scss" charset="utf-8">
     {% endblock %}
     {% endcompress %}
   </head>
@@ -84,9 +85,10 @@
     {% compress js %}
     {% block script %}
     <script src="{% static 'jquery/jquery.js' %}"></script>
+    <script src="{% static 'jsrender/jsrender.js' %}"></script>
     <script src="{% static 'jquery-cookie/jquery.cookie.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.js' %}"></script>
-    <script src="{% static 'outpost/ajax.js' %}"></script>
+    <script src="{% static 'base/common.js' %}"></script>
     <script>
     var checkTaskProgress = function(id) {
       var defer = $.Deferred();
