Add vertically aligned table cells style.

--- a/src/outpost/base/static/base/style.scss
+++ b/src/outpost/base/static/base/style.scss
@@ -17,6 +17,9 @@ body {
 label {
   font-weight: bold;
 }
+table.table-vcenter tbody tr td {
+  vertical-align: middle;
+}
 .navbar {
   .logo {
     padding: 10px;
