--- a/src/outpost/video/templates/video/recording_list.html
+++ b/src/outpost/video/templates/video/recording_list.html
@@ -1,4 +1,6 @@
 {% extends 'outpost/base.html' %}
+{% load static %}
+{% load i18n %}
 
 {% block content %}
 <h1 class="page-header">
@@ -6,21 +8,22 @@
 </h1>
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped">
+    <table id="recordings" class="table table-striped table-vcenter">
       <thead>
         <tr>
-          <th>#</th>
+          <th></th>
           <th>Recorder</th>
           <th>Room</th>
           <th>Date</th>
           <th>Size</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
         {% for r in object_list %}
-        <tr>
+        <tr class="align-middle">
           <th scope="row">
-            <a href="{% url 'video:recording:detail' pk=r.pk%}" class="btn btn-primary btn-xs">
+            <a href="{% url 'video:recording:detail' pk=r.pk%}" class="btn btn-primary btn-sm btn-block">
               <span >
                 {{ r.pk }}
             </a>
@@ -29,7 +32,7 @@
           <td>{{ r.recorder.room|default:"-" }}</td>
           <td>{{ r.created }}</td>
           <td>
-            <a href="{{ r.data.url }}" class="btn btn-default btn-sm">
+            <a href="{{ r.data.url }}" class="btn btn-default btn-sm btn-block">
               <span class="glyphicon glyphicon-download"></span>
               {{ r.data.size|filesizeformat }}
             </a>
