First draft of Event DASH publishing backend.

--- a/src/outpost/video/templates/video/nav.html
+++ b/src/outpost/video/templates/video/nav.html
@@ -7,6 +7,9 @@
   </a>
   <ul class="dropdown-menu">
     <li>
+      <a href="{% url 'video:event:list' %}">Events</a>
+    </li>
+    <li>
       <a href="{% url 'video:recording:list' %}">Recordings</a>
     </li>
     <li>
