--- a/src/outpost/video/templates/video/epiphan_detail.html
+++ b/src/outpost/video/templates/video/epiphan_detail.html
@@ -2,27 +2,37 @@
 {% load i18n %}
 {% load static %}
 {% load imagekit %}
+{% load guardian_tags %}
 
 {% block content %}
-<div class="page-header">
-  <h1>
+<h1 class="page-header row">
+  <div class="col-sm-12 col-md-10">
     {{ object }}
+    <small>
     {% if object.enabled %}
-      {% if object.online %}
-      <span class="label label-success">Online</span>
-      {% else %}
-      <span class="label label-default">Offline</span>
-      {% endif %}
-      {% if object.provision %}
-      <span class="label label-primary">Provisioning</span>
-      {% endif %}
+    {% if object.online %}
+    <span class="label label-success">Online</span>
+    {% else %}
+    <span class="label label-default">Offline</span>
+    {% endif %}
+    {% if object.provision %}
+    <span class="label label-primary">Provisioning</span>
+    {% endif %}
     {% else %}
     <span class="label label-default">Disabled</span>
     {% endif %}
-  </h1>
-</div>
+    </small>
+  </div>
+  <div class="col-sm-12 col-md-2">
+    {% get_obj_perms request.user for object as "object_perms" %}
+    <button type="button" class="btn btn-sm btn-block hidden" id="notification" data-enabled="{% if 'notify_recorder' in object_perms %}true{% else %}false{% endif %}">
+      <span class="glyphicon"></span>
+      {% trans 'Notification' %}
+    </button>
+  </div>
+</h1>
 {% if object.epiphansource_set.exists %}
-<h2>Sources</h2>
+<h2>{% trans 'Sources' %}</h2>
 <div class="row">
   {% for s in object.epiphansource_set.all %}
   {% if s.preview %}
@@ -36,89 +46,89 @@
 </div>
 {% else %}
 <div class="alert alert-info" role="alert">
-  No preview images available because of missing sources.
+  {% blocktrans %}No preview images available because of missing sources.{% endblocktrans %}
 </div>
 {% endif %}
-<h2>Channels</h2>
-<table class="table table-striped" id="channels">
-<thead>
-  <tr>
-    <th>Name</th>
-    <th>Path</th>
-    <th></th>
-  </tr>
-</thead>
-<tbody>
-  {% for c in object.epiphanchannel_set.all %}
-  <tr class="channel" data-url="{% url "video:recorder:epiphan-channel" pk=object.pk channel=c.pk %}">
-    <th scope="row">
-      {{ c.name }}
-    </th>
-    <td>
-      {{ c.path }}
-    </td>
-    <td class="status">
-    </td>
-  </tr>
-  {% endfor %}
-</tbody>
+<h2>{% trans 'Channels' %}</h2>
+<table class="table table-striped table-vcenter" id="channels">
+  <thead>
+    <tr>
+      <th>{% trans 'Name' %}</th>
+      <th>{% trans 'Path' %}</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for c in object.epiphanchannel_set.all %}
+    <tr class="channel" data-url="{% url "video:recorder:epiphan-channel" pk=object.pk channel=c.pk %}">
+      <th scope="row">
+        {{ c.name }}
+      </th>
+      <td>
+        {{ c.path }}
+      </td>
+      <td class="status">
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
-<h2>Recordings</h2>
+<h2>{% trans 'Recordings' %}</h2>
 {% if object.recording_set.exists %}
-<table class="table table-striped">
-<thead>
-  <tr>
-    <th>#</th>
-    <th>Date</th>
-    <th>Size</th>
-  </tr>
-</thead>
-<tbody>
-  {% for r in object.recording_set.all %}
-  <tr>
-    <th scope="row">
-      <a href="{% url 'video:recording:detail' pk=r.pk%}" class="btn btn-primary btn-xs">
-        {{ r.pk }}
-      </a>
-    </th>
-    <td>{{ r.created }}</td>
-    <td>
-      <a href="{{ r.data.url }}" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-download"></span>
-        {{ r.data.size|filesizeformat }}
-      </a>
-    </td>
-  </tr>
-  {% endfor %}
-</tbody>
+<table class="table table-striped table-vcenter">
+  <thead>
+    <tr>
+      <th></th>
+      <th>{% trans 'Date' %}</th>
+      <th>{% trans 'Size' %}</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for r in object.recording_set.all %}
+    <tr>
+      <th scope="row">
+        <a href="{% url 'video:recording:detail' pk=r.pk%}" class="btn btn-primary btn-sm btn-block">
+          {{ r.pk }}
+        </a>
+      </th>
+      <td>{{ r.created }}</td>
+      <td>
+        <a href="{{ r.data.url }}" class="btn btn-default btn-sm btn-block">
+          <span class="glyphicon glyphicon-download-alt"></span>
+          {{ r.data.size|filesizeformat }}
+        </a>
+      </td>
+    </tr>
+    {% endfor %}
+  </tbody>
 </table>
 {% else %}
 <div class="alert alert-info" role="alert">
-  No recordings yet!
+  {% blocktrans %}No recordings yet!{% endblocktrans %}
 </div>
 {% endif %}
 <script id="tmpl-channel-start" type="text/x-jsrender">
-<button class="btn btn-danger btn-xs start" type="button" data-toggle="tooltip" data-placement="right" title="Stop recording">
-  <span class="glyphicon glyphicon-play"></span>
-  {% trans "Start" %}
-</button>
+  <button class="btn btn-danger btn-sm btn-block start" type="button" data-toggle="tooltip" data-placement="right" title="Stop recording">
+    <span class="glyphicon glyphicon-play"></span>
+    {% trans 'Start' %}
+  </button>
 </script>
 <script id="tmpl-channel-stop" type="text/x-jsrender">
-<button class="btn btn-primary btn-xs" type="button" data-toggle="tooltip" data-placement="right" title="Start recording">
-  <span class="glyphicon glyphicon-stop"></span>
-  {% trans "Stop" %}
-</button>
+  <button class="btn btn-primary btn-sm btn-block" type="button" data-toggle="tooltip" data-placement="right" title="Start recording">
+    <span class="glyphicon glyphicon-stop"></span>
+    {% trans 'Stop' %}
+  </button>
 </script>
 {% include 'base/includes/lightbox.html' %}
 {% endblock %}
 
 {% block style %}
-  {{ block.super }}
-  <link rel="stylesheet" href="{% static 'base/lightbox.scss' %}" type="text/x-scss" charset="utf-8">
+{{ block.super }}
+<link rel="stylesheet" href="{% static 'base/lightbox.scss' %}" type="text/x-scss" charset="utf-8">
 {% endblock %}
 
 {% block script %}
-  {{ block.super }}
-  <script src="{% static 'base/lightbox.js' %}"></script>
-  <script src="{% static 'video/epiphan.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'base/lightbox.js' %}"></script>
+<script src="{% static 'video/epiphan.js' %}"></script>
 {% endblock %}
