--- a/src/outpost/video/templates/video/recorder_list.html
+++ b/src/outpost/video/templates/video/recorder_list.html
@@ -1,4 +1,5 @@
 {% extends 'outpost/base.html' %}
+{% load i18n %}
 
 {% block content %}
 <h1 class="page-header">
@@ -6,21 +7,21 @@
 </h1>
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-striped">
+    <table class="table table-striped table-vcenter">
       <thead>
         <tr>
-          <th scope="row">Name</th>
-          <th>Hostname</th>
-          <th>Enabled</th>
-          <th>Online</th>
-          <th>Room</th>
+          <th scope="row">{% trans 'Name' %}</th>
+          <th>{% trans 'Hostname' %}</th>
+          <th>{% trans 'Enabled' %}</th>
+          <th>{% trans 'Online' %}</th>
+          <th>{% trans 'Room' %}</th>
         </tr>
       </thead>
       <tbody>
         {% for r in object_list %}
         <tr>
           <td>
-            <a href="{% url 'video:recorder:detail' pk=r.pk%}">
+            <a href="{% url 'video:recorder:detail' pk=r.pk%}" class="btn btn-default btn-sm btn-block">
               <strong>{{ r.name }}</strong>
             </a>
           </td>
