--- a/src/outpost/video/templates/video/epiphan_detail.html
+++ b/src/outpost/video/templates/video/epiphan_detail.html
@@ -33,12 +33,14 @@
 </h1>
 {% if object.epiphansource_set.exists %}
 <h2>{% trans 'Sources' %}</h2>
-<div class="row">
+<div id="sources" class="row">
   {% for s in object.epiphansource_set.all %}
   {% if s.preview %}
-  <div class="col-xs-6 col-md-3">
+  <div class="col-xs-6 col-md-3 source" data-pk="{{ s.pk }}">
     <a class="thumbnail" href="{{ s.preview.url }}" data-toggle="modal" data-target="#lightbox" data-remote="false">
       {% generateimage 'video:source_thumbnail' source=s.preview %}
+      <div class="caption text-center">
+      </div>
     </a>
   </div>
   {% endif %}
@@ -129,6 +131,7 @@
 
 {% block script %}
 {{ block.super }}
+<script src="{% static 'd3/d3.js' %}"></script>
 <script src="{% static 'base/lightbox.js' %}"></script>
 <script src="{% static 'video/epiphan.js' %}"></script>
 {% endblock %}
