Enable deletion of Recordings through UI.

--- a/src/outpost/video/templates/video/recording_list.html
+++ b/src/outpost/video/templates/video/recording_list.html
@@ -26,7 +26,7 @@
       </thead>
       <tbody>
         {% for r in object_list %}
-        <tr class="align-middle">
+        <tr class="align-middle" data-url="{% url 'api:v1:recording-detail' pk=r.pk %}">
           <th scope="row">
             <a href="{% url 'video:recording:detail' pk=r.pk%}" class="btn btn-primary btn-sm btn-block">
               <span class="glyphicon glyphicon-file"></span>
@@ -45,9 +45,11 @@
             <button type="button" class="btn btn-danger btn-sm delete">
               <span class="glyphicon glyphicon-trash"></span>
             </button>
+            <!--
             <button type="button" class="btn btn-warning btn-sm archive">
               <span class="glyphicon glyphicon-compressed"></span>
             </button>
+            -->
           </td>
         </tr>
         {% endfor %}
@@ -85,7 +87,8 @@
     {% endif %}
   </div>
 </div>
-{% include 'base/includes/confirm.html' %}
+{% trans 'Delete?' as confirm_delete %}
+{% include 'base/includes/confirm.html' with caption=confirm_delete %}
 {% endblock %}
 
 {% block script %}
