--- a/src/outpost/base/templates/base/includes/confirm.html
+++ b/src/outpost/base/templates/base/includes/confirm.html
@@ -1,10 +1,11 @@
 {% load i18n %}
 <script id="tmpl-confirm-delete" type="text/x-jsrender">
-<button type="button" class="btn btn-danger btn-sm pull-left proceed">
+{{ caption }}
+<button type="button" class="btn btn-danger btn-sm pull-left proceed btn-block">
   <span class="glyphicon glyphicon-ok"></span>
   {% trans "Yes" %}
 </button>
-<button type="button" class="btn btn-default btn-sm pull-right">
+<button type="button" class="btn btn-default btn-sm pull-right btn-block">
   <span class="glyphicon glyphicon-remove"></span>
   {% trans "No" %}
 </button>
