Add Video views.

--- a/src/outpost/video/templates/video/epiphan_detail.html
+++ b/src/outpost/video/templates/video/epiphan_detail.html
@@ -33,6 +33,10 @@
     </button>
   </div>
 </h1>
+<div class="row">
+  <div class="col-sm-12 col-md-2">
+  </div>
+</div>
 {% if object.epiphansource_set.exists %}
 <h2>{% trans 'Sources' %}</h2>
 <div id="sources" class="row">
