--- a/src/outpost/video/templates/video/recording_detail.html
+++ b/src/outpost/video/templates/video/recording_detail.html
@@ -26,6 +26,7 @@
     </p>
   </div>
 </div>
+<h2>{% trans 'Exporters' %}</h2>
 <div class="row">
   {% for exporter in exporters %}
   <div class="col-xs-12 col-sm-6 col-md-3 exporter" data-url="{% url 'video:recording:export' pk=object.pk exporter=exporter.1 %}">
@@ -57,9 +58,76 @@
   </div>
   {% endfor %}
 </div>
+<h2>{% trans 'Assets' %}</h2>
+<div class="alert alert-info text-center" id="upload">
+  <div>
+    <span class="glyphicon glyphicon-upload"></span>
+    Drag &amp; drop files here
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <table id="assets" class="table table-striped table-vcenter">
+      <thead>
+        <tr>
+          <th></th>
+          <th>{% trans 'Name' %}</th>
+          <th>{% trans 'MIME-Type' %}</th>
+          <th>{% trans 'Date' %}</th>
+          <th>{% trans 'Size' %}</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+  </div>
+</div>
+<script id="tmpl-asset" type="text/x-jsrender">
+<tr>
+  <td>
+    <span class="glyphicon glyphicon-file"></span>
+  </td>
+  <td>[[:name]]</td>
+  <td>[[:mimetype]]</td>
+  <td>[[:created]]</td>
+  <td>[[:size]]</td>
+  <td>
+    <button class="btn btn-danger delete" data-toggle="popover" title="{% trans "Really delete?" %}">
+      <span class="glyphicon glyphicon-trash"></span>
+    </button>
+    <a class="btn btn-default download" href="[[:url]]">
+      <span class="glyphicon glyphicon-download"></span>
+    </a>
+  </td>
+</tr>
+</script>
+<script id="tmpl-upload" type="text/x-jsrender">
+<div class="row fade">
+  <div class="col-xs-10">
+    <div class="progress">
+      <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <span></span>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-2">
+    <button type="button" class="btn btn-warning btn-block btn-sm cancel">
+      <span class="glyphicon glyphicon-remove"></span>
+      {% trans "Abort" %}
+    </button>
+  </div>
+</div>
+</script>
 {% endblock %}
 
 {% block script %}
 {{ block.super }}
+<script src="{% static 'jquery-event-drag/jquery.event.drag.js' %}" charset="iso-8859-15"></script>
+<script src="{% static 'jquery-event-drop/jquery.event.drop.js' %}"></script>
+<script src="{% static 'video/asset.js' %}"></script>
 <script src="{% static 'video/export.js' %}"></script>
+<script>
+  {% for asset in object.recordingasset_set.all %}
+  {% endfor %}
+</script>
 {% endblock %}
