Working FrreRADIUS integration structure for networktokens.

--- a/src/outpost/networktoken/templates/networktoken/token_detail.html
+++ b/src/outpost/networktoken/templates/networktoken/token_detail.html
@@ -15,7 +15,7 @@ TODO: Some description on how to use this.
 </p>
 <h3>{% trans "Username" %}</h3>
 <div class="well text-center">
-{{ token.pk }}
+guest_{{ token.pk }}
 </div>
 <h3>{% trans "Password" %}</h3>
 <div class="well text-center">
