--- a/src/outpost/networktoken/templates/networktoken/token_form.html
+++ b/src/outpost/networktoken/templates/networktoken/token_form.html
@@ -10,9 +10,12 @@
   </h1>
 </div>
 <p>
+<div class="alert alert-info" role="alert">
+<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
 {% blocktrans %}
-TODO: Some description on how to use this.
+You can create a temporary Username and Password to connect to the WLAN named <code>mug-guest</code>. The lifetime for this account can be up to 24 hours.
 {% endblocktrans %}
+</div>
 </p>
 <form method="post" action="{% url 'networktoken:create' %}" enctype="multipart/form-data">
     {% csrf_token %}
