Show network token as monospaced font.

--- a/src/outpost/networktoken/templates/networktoken/token_detail.html
+++ b/src/outpost/networktoken/templates/networktoken/token_detail.html
@@ -19,7 +19,7 @@ guest_{{ token.pk }}
 </div>
 <h3>{% trans "Password" %}</h3>
 <div class="well text-center">
-{{ token.value }}
+    <code>{{ token.value }}</code>
 </div>
 <h3>{% trans "Expiration" %}</h3>
 <div class="well text-center">
