--- a/src/outpost/base/templates/registration/login.html
+++ b/src/outpost/base/templates/registration/login.html
@@ -1,20 +1,34 @@
-{% extends "outpost/base.html" %}
+{% extends "registration/base.html" %}
 
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block style %}
+{{ block.super }}
+<style>
+#logo {
+    width: 60%;
+    margin: 0 20%;
+}
+</style>
+{% endblock %}
 
 {% block content %}
 <div class="signin">
-  {% if next %}
-      <div class="alert alert-info" role="alert">
-        {% if user.is_authenticated %}
-        Your account doesn't have access to this page. To proceed, please login with an account that has access.
-        {% else %}
-        Please login to see this page.
-        {% endif %}
-      </div>
-  {% endif %}
   <form method="post" action="{% url 'accounts:login' %}" class="form-signin well">
+    <p>
+        <img id="logo" src="{% static 'logo.svg' %}" />
+    </p>
     {% csrf_token %}
+    {% if next %}
+        <div class="alert alert-info" role="alert">
+            {% if user.is_authenticated %}
+            Your account doesn't have access to this page. To proceed, please login with an account that has access.
+            {% else %}
+            Please login to see this page.
+            {% endif %}
+        </div>
+    {% endif %}
     {{ form|crispy }}
     <button class="btn btn-lg btn-primary btn-block" type="submit">
       <i class="glyphicon glyphicon-log-in"></i>
