--- a/src/outpost/base/templates/outpost/base.html
+++ b/src/outpost/base/templates/outpost/base.html
@@ -69,7 +69,7 @@
             </li>
             {% else %}
             <li>
-              <a href="{% url 'accounts:login' %}">
+              <a href="{% url 'accounts:login' %}?next={{ request.get_full_path }}">
                 <i class="glyphicon glyphicon-log-in"></i>
                 Login
               </a>
