--- a/src/outpost/base/templates/registration/login.html
+++ b/src/outpost/base/templates/registration/login.html
@@ -7,40 +7,47 @@
 {{ block.super }}
 <style>
 #logo {
-    width: 40%;
-    margin: 0 30%;
+    width: 100%;
 }
 </style>
 {% endblock %}
 
 {% block content %}
-<div class="signin">
-  <form method="post" action="{% url 'accounts:login' %}" class="form-signin well">
-    <p>
-        <img id="logo" src="{% static 'logo.svg' %}" />
-    </p>
-    {% csrf_token %}
-    {% if next %}
-        <div class="alert alert-info" role="alert">
-            {% if user.is_authenticated %}
-            Your account doesn't have access to this page. To proceed, please login with an account that has access.
-            {% else %}
-            Please login to see this page.
-            {% endif %}
+<div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8 well">
+        <div class="row">
+            <div class="col-md-4 visible-md-block visible-lg-block">
+                <p>
+                <img id="logo" src="{% static 'logo.svg' %}" />
+                </p>
+            </div>
+            <div class="col-md-8">
+                <form method="post" action="{% url 'accounts:login' %}" class="form-signin">
+                    {% csrf_token %}
+                    {% if next %}
+                    <div class="alert alert-info" role="alert">
+                        {% if user.is_authenticated %}
+                        Your account doesn't have access to this page. To proceed, please login with an account that has access.
+                        {% else %}
+                        Please login to see this page.
+                        {% endif %}
+                    </div>
+                    {% endif %}
+                    {{ form|crispy }}
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">
+                        <i class="glyphicon glyphicon-log-in"></i>
+                        Sign in
+                    </button>
+                    <a href="{% url 'saml2:saml2_login' %}" class="btn btn-lg btn-warning btn-block">
+                        <i class="glyphicon glyphicon-flash"></i>
+                        Single Sign On
+                    </a>
+                    <input type="hidden" name="next" value="{{ next }}" />
+                </form>
+            </div>
         </div>
-    {% endif %}
-    {{ form|crispy }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">
-      <i class="glyphicon glyphicon-log-in"></i>
-      Sign in
-    </button>
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
-</div>
-<div class="signin well">
-    <a href="{% url 'saml2:saml2_login' %}" class="btn btn-lg btn-warning btn-block">
-      <i class="glyphicon glyphicon-flash"></i>
-      Single Sign On
-    </a>
+    </div>
+    <div class="col-md-2"></div>
 </div>
 {% endblock %}
