[Salt] Add support for deploying public keys, frontend implementation.

--- a/src/outpost/django/base/templates/outpost/base.html
+++ b/src/outpost/django/base/templates/outpost/base.html
@@ -40,6 +40,7 @@
             {% include 'oauth2/nav.html' %}
             {% include 'api/nav.html' %}
             {% include 'networktoken/nav.html' %}
+            {% include 'salt/nav.html' %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if request.user.is_authenticated %}
