Fix user authentication check in nav templates.

--- a/src/outpost/django/networktoken/templates/networktoken/nav.html
+++ b/src/outpost/django/networktoken/templates/networktoken/nav.html
@@ -1,4 +1,4 @@
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
 <li>
   <a href="{% url 'networktoken:create' %}">
     <span class="glyphicon glyphicon-tower"></span>
