--- a/src/outpost/django/salt/templates/salt/nav.html
+++ b/src/outpost/django/salt/templates/salt/nav.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-{% if user.is_authenticated %}
+{% if request.user.is_authenticated %}
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
     <span class="glyphicon glyphicon-dashboard"></span>
