[API] Add schema endpoint.

--- a/src/outpost/django/api/templates/api/nav.html
+++ b/src/outpost/django/api/templates/api/nav.html
@@ -6,6 +6,9 @@
   </a>
   <ul class="dropdown-menu">
     <li>
+      <a href="{% url 'api:schema' %}">Schema</a>
+    </li>
+    <li>
       <a href="{% url 'api:v1:api-root' %}">Version 1</a>
     </li>
   </ul>
